Fix spacing

--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
     background-color: rgb(255, 255, 255);
     border-radius: 20px 20px 0 0;
     box-sizing: border-box;
-    padding: 20px;
-    height: 200px;
+    padding: 0.7em;
+    height: 12em;
     margin: 0 auto;
 }
 
@@ -55,6 +55,10 @@ body {
     display: flex;
     justify-content: center;
     padding-bottom: 1em;
+}
+
+.temp {
+    font-size: 2em;
 }
 
 .weather-desc {
@@ -87,5 +91,5 @@ body {
     border-radius: 0.8em;
     border-style: none;
     padding: 0.3em;
-    margin: 0.2em;
 }
+
